More work on PCA and MCS